5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1590_1016.log
== TEST (2019-03-22 21:49:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=int(input(a=))
var2=int(input(b=))
var3=int(input(c=))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- ERROR:
File "XXXX", line 4
    var1=int(input(a=))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:49:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=int(input("a="))
var2=int(input("b="))
var3=int(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:49:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=int(input("a="))
var2=int(input("b="))
var3=int(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:50:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=int(input("a="))
var2=int(input("b="))
var3=int(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.191148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 4, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:50:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=int(input("a="))
var2=int(input("b="))
var3=int(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:50:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=int(input("a="))
var2=int(input("b="))
var3=int(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.192834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 4, in <module>
    var1=int(input())
ValueError: invalid literal for int() with base 10: '11.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:50:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=(input("a="))
var2=(input("b="))
var3=(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s=(var1+var2+var3)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:51:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:52:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.142209
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:52:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:52:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.1186
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
